# DLM

./: .gitignore  LICENSE  README.md  linkedin_post.txt  pyproject.toml
.github/workflows/: ci.yml
binder/: requirements.txt
content/: modeling-guide.md
docs/superpowers/plans/: 2026-04-23-dlm-tutorial-implementation.md  2026-04-29-advanced-notebook-implementation.md  2026-04-29-intermediate-notebook-implementation.md  2026-04-30-beginner-notebook-implementation.md  2026-04-30-dlm-tutorial-standalone.md
docs/superpowers/specs/: 2026-04-23-dlm-tutorial-design.md  2026-04-29-advanced-notebook-design.md  2026-04-29-dlm-tutorial-standalone-design.md  2026-04-29-intermediate-notebook-design.md  2026-04-30-beginner-notebook-design.md
engine/: comparison.py  conjugate.py  diagnostics.py  ffbs.py  filter.py  forecast.py  interventions.py  models.py  simulate.py  smoother.py
lessons/: __init__.py  local_level.py  local_linear_trend.py  seasonal.py  workflow.py
notebooks/advanced/: 00_advanced_setup.ipynb  06_arima_dlm_equivalence.ipynb  07_ffbs_and_mcmc.ipynb  08_interventions_outliers.ipynb  09_monitoring_structural_breaks.ipynb  10_multivariate_missing_data.ipynb
notebooks/beginner/: 00_setup.ipynb  B0_bayesian_primer.ipynb  B1_dlm_intro.ipynb  B2_local_level.ipynb  B3_local_linear_trend.ipynb  B4_seasonal_models.ipynb  B5_parameter_estimation.ipynb  B6_dlm_glm_connection.ipynb
notebooks/capstone/: C1_full_workflow.ipynb
solutions/advanced/: 06_arima_dlm_equivalence_solutions.ipynb  07_ffbs_and_mcmc_solutions.ipynb  08_interventions_outliers_solutions.ipynb  09_monitoring_structural_breaks_solutions.ipynb  10_multivariate_missing_data_solutions.ipynb
solutions/beginner/: B1_dlm_intro_solutions.ipynb  B2_local_level_solutions.ipynb  B3_local_linear_trend_solutions.ipynb  B4_seasonal_models_solutions.ipynb  B5_parameter_estimation_solutions.ipynb  B6_dlm_glm_connection_solutions.ipynb
tests/: test_advanced_engine.py  test_content.py  test_diagnostics.py  test_filter.py  test_forecast.py  test_intermediate_engine.py  test_lessons.py  test_models.py  test_simulate.py  test_smoother.py
ui/: app.py  content_index.py  controls.py  plots.py  state.py  workflow_render.py
